# kosame

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
examples/postgres/: Cargo.toml
examples/postgres/src/: main.rs
examples/tokio_postgres/src/: main.rs
kosame/: Cargo.toml
kosame/src/: keyword.rs  lib.rs  prelude.rs  relation.rs
kosame/src/query/: mod.rs
kosame/src/statement/: mod.rs
kosame/tests/: select.rs
kosame_cli/: Cargo.toml
kosame_cli/src/: fmt.rs  main.rs
kosame_dsl/: Cargo.toml
kosame_dsl/src/: attribute.rs  bind_params.rs  correlations.rs  data_type.rs  keyword.rs  lib.rs  parse_option.rs  pretty_print.rs  row.rs  scopes.rs  unique_macro.rs
kosame_dsl/src/clause/: field.rs  from.rs  group_by.rs  having.rs  limit.rs  mod.rs  offset.rs  order_by.rs  returning.rs  select.rs  values.rs  where.rs  with.rs
kosame_dsl/src/command/: delete.rs  (+4 more)
kosame_macro/: Cargo.toml
kosame_macro/src/: attribute.rs  call_site_path.rs  correlations.rs  data_type.rs  inferred_type.rs  lib.rs  parent_map.rs  scope.rs  scope_module.rs  scopes.rs  visitor.rs
kosame_macro/src/clause/: field.rs  from.rs  with.rs
kosame_macro/src/command/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
kosame_macro/src/expr/: column_ref.rs  raw.rs  unary.rs
kosame_macro/src/part/: mod.rs  table_alias.rs  table_path.rs  target_table.rs
kosame_macro/src/query/: field.rs  mod.rs  node.rs
kosame_macro/src/statement/: command_tree.rs  mod.rs
kosame_repr/: Cargo.toml
kosame_sql/: Cargo.toml
kosame_sql/src/: fmt_sql.rs  formatter.rs  lib.rs  punctuated.rs
(+66 files in other folders)
